# dorados

./: README.md  model.sdf
KODTA/ROS2/: package.xml
KODTA/ROS2/src/: hello_publisher copy.cpp  publisher.cpp
KODTA/arithmetic/: CMakeLists.txt  argument.cpp  arithmetic.cpp  package.xml
KODTA/arithmetic/launch/: arithmetic.launch.py
KODTA/arithmetic/src/: argument.cpp  calculator.cpp
KODTA/interface_example/: CMakeLists.txt
KODTA/interface_example/action/: ArithmeticChecker.action
KODTA/interface_example/srv/: AddTwoInt.srv  ArithmeticOperator.srv
KODTA/moveTSim/: CMakeLists.txt  package.xml
KODTA/moveTSim/src/: moveTurtleSim.cpp
KODTA/move_t_sim/: CMakeLists.txt  package.xml
KODTA/move_t_sim/src/: canny_camera.cpp  moveTurtle.cpp  moveTurtleBot2.cpp  moveTurtleBotcpp.cpp  moveTurtleBotcpp2.cpp  moveTurtleSim.cpp  stay_thirty.cpp  waypoints_action.cpp
KODTA/simple pkg/src/: hello_publisher_class2.cpp
KODTA/simple_pkg_cpp/: CMakeLists.txt  package.xml
KODTA/simple_pkg_cpp/launch/: action.launch.py
KODTA/simple_pkg_cpp/param/: service.yaml
KODTA/simple_pkg_cpp/src/: hello_publisher.cpp  hello_publisher_class.cpp  hello_publisher_class2.cpp  hello_subscriber_class.cpp  publisher.cpp  simple_action_client.cpp  simple_service_client2.cpp  simple_service_server.cpp  time_pub.cpp  (+2 more)
KODTA/simplepkg_cpp/: CMakeLists.txt
KODTA/topic_final/: CMakeLists.txt
KODTA/topic_final/src/: msub.cpp  mtsub.cpp  tpub.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interface_example/: CMakeLists.txt  package.xml
log/: latest_build
(+143 files in other folders)
